# CUDA_Image_Processing

CUDA_Blur/: blur  cuda_blur.cu
CUDA_Grayscaling/: CMakeLists.txt  rgb_to_grayscale.cu
